<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    tools:context="com.example.mvvmdemo.MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_extra_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:maxWidth="@dimen/layout_max_width"
        android:padding="@dimen/spacing_large"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/color_divider"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleHello"
                style="@style/TextAppearance.MVVMDemo.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello_title" />

            <TextView
                android:id="@+id/textHelloMessage"
                style="@style/TextAppearance.MVVMDemo.Subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/hello_message"
                tools:text="你好，用户@example.com！" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@color/color_divider" />

            <TextView
                android:id="@+id/textHelloDescription"
                style="@style/TextAppearance.MVVMDemo.Body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/hello_description" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/buttonActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/spacing_large"
        android:maxWidth="@dimen/layout_max_width"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBackToLogin"
            style="@style/Widget.MVVMDemo.PrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_back_to_login" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonGoToRegister"
            style="@style/Widget.MVVMDemo.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/hello_go_to_register" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
